<resources>

    <string name="app_name">Cashbox</string>
    <string name="icon">icon</string>
    <string name="expenses">Expenses</string>
    <string name="revenues">Revenues</string>
    <string name="settings">Settings</string>
    <string name="import_">Import</string>
    <string name="export">Export</string>
    <string name="accounts">Accounts</string>
    <string name="add_account">Add Account</string>
    <string name="view_account">View Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add Category</string>
    <string name="view_category">View Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="transactions">Transactions</string>
    <string name="add_expense_transaction">Add Expense</string>
    <string name="edit_expense_transaction">Edit Expense</string>
    <string name="view_expense_transaction">View Expense</string>
    <string name="add_revenue_transaction">Add Revenue</string>
    <string name="edit_revenue_transaction">Edit Revenue</string>
    <string name="view_revenue_transaction">View Revenue</string>
    <string name="import_export">Import/Export</string>

    <string name="add">Add</string>
    <string name="type">Type</string>
    <string name="limit">Limit</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="receipt">Receipt</string>
    <string name="capture">Capture</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="clean">Clean</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>

    <string name="grocery">Grocery</string>
    <string name="zero">0</string>
    <string name="fraction">%1$d/%2$d</string>

    <string name="account_name_missing">Account name is empty</string>
    <string name="account_type_missing">Account type is empty</string>
    <string name="account_missing">No account selected</string>

    <string name="category_name_missing">Category name is empty</string>
    <string name="category_limit_missing">Category limit is empty</string>
    <string name="category_missing">No category selected</string>

    <string name="transaction_name_missing">Transaction name is empty</string>
    <string name="transaction_value_missing">Value is empty</string>
    <string name="transaction_value_invalid">Value invalid</string>
    <string name="transaction_date_invalid">Date invalid</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="date_range_format">%1$s ~ %2$s</string>

    <string name="no_accounts">You don\'t have any accounts at the moment. Click the "+" (plus) button up top to get started.</string>
    <string name="no_categories">You don\'t have any categories at the moment. Click the "+" (plus) button up top to get started.</string>
    <string name="no_expenses">You don\'t have any expense transactions at the moment. Click the "+" (plus) button up top to get started.</string>
    <string name="no_expenses_for_category">You don\'t have any expense transactions for category \"%1$s\"</string>
    <string name="no_revenues">You don\'t have any revenue transactions at the moment. Click the "+" (plus) button up top to get started.</string>
    <string name="no_revenues_for_category">You don\'t have any revenue transactions for category \"%1$s\"</string>

    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="start_date_after_end_date">Start date must be on or before end date</string>

    <string name="cleanup_help">All receipts on or before chosen date will be deleted</string>

    <string name="importedFrom">Import finished. Source: %1$s</string>
    <string name="exportedTo">Export finished. File: %1$s</string>
    <string name="fileMissing">File missing: %1$s</string>
    <string name="importFailed">Import failed. Reason: %1$s</string>
    <string name="exportFailed">Export failed. Reason: %1$s</string>
    <string name="importing">Importing&#8230;</string>
    <string name="exporting">Exporting&#8230;</string>

    <string name="purgeOldReceipts">Purge old receipts</string>
    <string name="cleaning">Cleaning&#8230;</string>

    <string name="receipt_capture_error">Unable to capture image with camera</string>
    <string name="no_camera_permission_error">Unable to capture receipt without the camera permission</string>

    <string name="iconDescription">Cashbox icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search">Search</string>
    <string name="color">Color</string>
    <string name="currency">Currency</string>
    <string name="opening_balance">Opening balance</string>
    <string name="cash">cash</string>
    <string name="credit_card">credit card</string>
    <string name="bank_account">bank account</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="cad">CAD</string>
    <string name="gbp">GBP</string>
    <string name="chf">CHF</string>
    <string name="czk">CZK</string>
    <string name="pln">PLN</string>
    <string name="huf">HUF</string>
    <string name="currency_unknown">Unknown currency</string>
    <string name="about_body">
        Version: 1.0.1\n\n
        License: GPLv3\n\n
        Source: <a href="https://github.com/ethael/cashbox\nAuthor: Marian Mizik\nUsed sources: ">GitHub</a>\n\n
        Libraries: <a href='https://commons.apache.org/proper/commons-csv/' style='color:#EAEAEA;'>Commons CSV</a>, <a href='https://github.com/brarcher/budget-watch' style='color:#EAEAEA;'>Budget Watch</a>, <a href='https://icomoon.io/#icons-icomoon' style='color:#EAEAEA;'>Icomoon</a>
    </string>
    <string name="unknown_action">Unknown action request arrived: </string>
    <string name="unknown_mode">Unknown mode request arrived: </string>
    <string name="drawer_contact">github.com/ethael/cashbox</string>
    <string name="about">About</string>
    <string name="delete_confirmation_account">Are you sure you want to delete this account?</string>
    <string name="delete_confirmation_category">Are you sure you want to delete this category?</string>
    <string name="delete_confirmation_transaction">Are you sure you want to delete this transaction?</string>
    <string name="delete_success_account">Account has been successfully deleted.</string>
    <string name="delete_success_category">Category has been successfully deleted.</string>
    <string name="delete_success_transaction">Transaction has been successfully deleted.</string>
    <string name="save_success_account">Account has been successfully saved.</string>
    <string name="save_success_category">Category has been successfully saved.</string>
    <string name="save_success_transaction">Transaction has been successfully saved.</string>
    <string name="account_type_unknown">Unknown account type</string>
    <string name="max_value">Max </string>
    <string name="dashboard">Dashboard</string>
    <string name="wrong_password">Wrong password. Please try again.</string>
    <string name="password">Password</string>
    <string name="light_theme">Light Theme</string>
    <string name="settings_saved">Settings successfully saved</string>
    <string name="value">Value</string>
    <string name="enter_password">Enter password</string>
    <string name="encryption">Encryption</string>
</resources>