<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:labelFor="@+id/name"
                    android:paddingEnd="20.0dip"
                    android:paddingStart="20.0dip"
                    android:text="@string/name"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip"
                android:id="@+id/category_field">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:labelFor="@+id/category_spinner"
                    android:paddingEnd="20.0dip"
                    android:paddingStart="20.0dip"
                    android:text="@string/category"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:labelFor="@+id/account_spinner"
                    android:paddingEnd="20.0dip"
                    android:paddingStart="20.0dip"
                    android:text="@string/account"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/account_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:labelFor="@+id/transaction_value"
                    android:paddingEnd="20.0dip"
                    android:paddingStart="20.0dip"
                    android:text="@string/value"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/transaction_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="40dp"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/transaction_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:labelFor="@+id/note"
                    android:paddingEnd="20.0dip"
                    android:paddingStart="20.0dip"
                    android:text="@string/note"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/note"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:labelFor="@+id/date"
                    android:paddingEnd="20.0dip"
                    android:paddingStart="20.0dip"
                    android:text="@string/date"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/receipt_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="20.0dip"
                    android:paddingStart="20.0dip"
                    android:text="@string/receipt"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/receipt_location"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/receipt_null"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/capture_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/capture" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/receipt_not_null"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/view_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/view" />

                    <Button
                        android:id="@+id/update_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/update"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>