<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="protect.cashbox.account.AccountDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/account_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="20.0dip"
                android:paddingStart="20.0dip"
                android:text="@string/name"
                android:textSize="16.0sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/account_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingEnd="20.0dip"
                android:paddingStart="20.0dip"
                android:text="@string/light_theme"
                android:textSize="16.0sp"
                android:textStyle="bold"/>

            <Switch
                android:id="@+id/settings_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:checked="false"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingEnd="20.0dip"
                android:paddingStart="20.0dip"
                android:text="@string/encryption"
                android:textSize="16.0sp"
                android:textStyle="bold"/>

            <Switch
                android:id="@+id/settings_encryption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:checked="false"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="20.0dip"
                android:paddingStart="20.0dip"
                android:text="@string/opening_balance"
                android:textSize="16.0sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/account_opening_balance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zero"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="20.0dip"
                android:paddingStart="20.0dip"
                android:text="@string/currency"
                android:textSize="16.0sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/account_currency"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
